디자인 콘텐츠 빼고 다

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="/index.css" rel="stylesheet" />
     
     <!-- 웹사이트의 파비콘 설정 -->
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="logo.ico" />
 
     <!-- 웹 페이지의 제목 설정 -->
     <title>SC Ent</title>
